test/errors/func3.qk

#OUTPUT
#Syntax Error: Expected function argument name.
# -> [12] func add_two(:int, y:int)
#
#END

#RET 1

extern func printf(s:str, ...)

func add_two(:int, y:int)
    x = x + y
end

func main -> int
    return 0
end

